# clean-llm

./: README.md  pyproject.toml
clean_llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: test_qwen2_5.py
scripts/configs/: evaluate_cs336_lm.yaml  pretrain_cs336_lm.yaml  sft_gsm8k.yaml  tokenizer.yaml
